Multi-Ninja: Fix PCHs for Visual C++

Fixes: #20711